--- a/css/style.css
+++ b/css/style.css
@@ -302,8 +302,17 @@ body {
 }
 
 .btn-small {
+    display: flex;
     padding: 8px 20px;
     font-size: 0.9rem;
+    color: #007bff;
+}
+
+.btn-small1 {
+    display: flex;
+    padding: 8px 20px;
+    font-size: 0.9rem;
+    color: #007bff;
 }
 
 /* Contact Section */
